--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,15 @@
 [Window][Debug##Default]
-Pos=10,16
-Size=213,210
+Pos=10,8
+Size=211,227
 Collapsed=0
 
 [Window][Your first window!]
 Pos=60,60
 Size=94,48
+Collapsed=0
+
+[Window][Enviroments]
+Pos=0,1
+Size=240,240
 Collapsed=0
 
